--- a/index.html
+++ b/index.html
@@ -3,59 +3,186 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Beautiful — салон красоты</title>
-  <link rel="stylesheet" href="css/style.css">
+
+  <!-- ШРИФТ (чистый, современный, не вырвиглаз) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- ОСНОВНОЙ СТИЛЬ -->
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-<header class="header">
-  <h1>Beautiful</h1>
-  <nav>
-    <a href="#services">Услуги</a>
-    <a href="#booking">Запись</a>
-    <a href="#reviews">Отзывы</a>
-  </nav>
-</header>
+<body class="light-theme">
 
-<section class="hero">
-  <h2>Салон красоты нового поколения</h2>
-  <p>Дзержинск · ул. Ленина 67 · Пн–Пт 9:00–20:00</p>
-</section>
+  <!-- ================= HEADER ================= -->
+  <header class="header">
+    <div class="logo">
+      <span class="logo-star">★</span>
+      <span class="logo-text">Beautiful</span>
+    </div>
 
-<section id="services" class="services">
-  <h2>Наши услуги</h2>
+    <nav class="nav">
+      <a href="#services">Услуги</a>
+      <a href="#booking">Запись</a>
+      <a href="#reviews">Отзывы</a>
+      <a href="#contacts">Контакты</a>
+    </nav>
 
-  <div class="service-card" onclick="openBooking('nails')">
-    💅 Маникюр и ногти
-  </div>
+    <!-- ПЕРЕКЛЮЧАТЕЛЬ ТЕМ -->
+    <button id="themeToggle" class="theme-toggle" aria-label="Сменить тему">
+      🌙
+    </button>
+  </header>
 
-  <div class="service-card" onclick="openBooking('hair')">
-    💇 Волосы и укладка
-  </div>
+  <!-- ================= HERO ================= -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Салон красоты<br><span>Beautiful</span></h1>
+      <p>
+        Премиальный уход • Современный сервис • Индивидуальный подход
+      </p>
 
-  <div class="service-card" onclick="openBooking('makeup')">
-    💄 Макияж
-  </div>
-</section>
+      <a href="#booking" class="btn btn-primary">
+        Онлайн-запись
+      </a>
+    </div>
 
-<section id="booking" class="booking hidden">
-  <h2 id="booking-title"></h2>
-  <div class="calendar" id="calendar"></div>
-  <button onclick="closeBooking()">Закрыть</button>
-</section>
+    <!-- ЗВЕЗДОПАД (ТОЛЬКО В ТЁМНОЙ ТЕМЕ, JS) -->
+    <canvas id="stars"></canvas>
+  </section>
 
-<section id="reviews" class="reviews">
-  <h2>Отзывы клиентов</h2>
-  <div class="review">«Очень красиво и дорого выглядит» — Алина</div>
-  <div class="review">«Уровень Москвы» — Мария</div>
-  <div class="review">«Хочется возвращаться» — Екатерина</div>
-</section>
+  <!-- ================= SERVICES ================= -->
+  <section id="services" class="services">
+    <h2>Наши услуги</h2>
 
-<footer>
-  © Beautiful · Дзержинск
-</footer>
+    <div class="services-grid">
 
-<script src="js/booking.js"></script>
+      <!-- УСЛУГА 1 -->
+      <div class="service-card" data-service="hair">
+        <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9" alt="Парикмахерские услуги">
+        <h3>Парикмахерские услуги</h3>
+        <p>Стрижки, окрашивание, уход</p>
+        <button class="btn btn-outline">Записаться</button>
+      </div>
+
+      <!-- УСЛУГА 2 -->
+      <div class="service-card" data-service="nails">
+        <img src="https://images.unsplash.com/photo-1604654894610-df63bc536371" alt="Маникюр">
+        <h3>Маникюр и педикюр</h3>
+        <p>Идеальная форма и стиль</p>
+        <button class="btn btn-outline">Записаться</button>
+      </div>
+
+      <!-- УСЛУГА 3 -->
+      <div class="service-card" data-service="cosmetology">
+        <img src="https://images.unsplash.com/photo-1595475884562-073c30d45670" alt="Косметология">
+        <h3>Косметология</h3>
+        <p>Уход за кожей и омоложение</p>
+        <button class="btn btn-outline">Записаться</button>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- ================= BOOKING / CALENDAR ================= -->
+  <section id="booking" class="booking">
+    <h2>Онлайн-запись</h2>
+    <p class="booking-subtitle">
+      Выберите услугу и удобную дату. Мы работаем пн–пт с 9:00 до 20:00
+    </p>
+
+    <!-- КАЛЕНДАРЬ (JS будет подставлять данные) -->
+    <div class="calendar-container">
+      <div class="calendar-header">
+        <button id="prevMonth">‹</button>
+        <h3 id="calendarMonth">Месяц</h3>
+        <button id="nextMonth">›</button>
+      </div>
+
+      <div class="calendar-grid" id="calendarGrid">
+        <!-- Дни недели -->
+        <div class="day-name">Пн</div>
+        <div class="day-name">Вт</div>
+        <div class="day-name">Ср</div>
+        <div class="day-name">Чт</div>
+        <div class="day-name">Пт</div>
+        <div class="day-name">Сб</div>
+        <div class="day-name">Вс</div>
+
+        <!-- ДАТЫ (JS) -->
+      </div>
+    </div>
+
+    <!-- YCLIENTS -->
+    <a
+      href="https://yclients.com"
+      target="_blank"
+      class="btn btn-primary btn-white"
+    >
+      Записаться через YCLIENTS
+    </a>
+  </section>
+
+  <!-- ================= REVIEWS ================= -->
+  <section id="reviews" class="reviews">
+    <h2>Отзывы клиентов</h2>
+
+    <div class="reviews-grid">
+
+      <div class="review-card">
+        <p>
+          “Лучший салон в Дзержинске! Атмосфера, сервис и результат — на высоте.”
+        </p>
+        <span>— Анна</span>
+      </div>
+
+      <div class="review-card">
+        <p>
+          “Очень приятный персонал и шикарный результат. Вернусь обязательно.”
+        </p>
+        <span>— Екатерина</span>
+      </div>
+
+      <div class="review-card">
+        <p>
+          “Современно, красиво и профессионально. Рекомендую!”
+        </p>
+        <span>— Мария</span>
+      </div>
+
+    </div>
+
+    <!-- ФОРМА ДОБАВЛЕНИЯ ОТЗЫВА -->
+    <form class="review-form">
+      <input type="text" placeholder="Ваше имя" required>
+      <textarea placeholder="Ваш отзыв" required></textarea>
+      <button class="btn btn-primary">Оставить отзыв</button>
+    </form>
+  </section>
+
+  <!-- ================= CONTACTS ================= -->
+  <section id="contacts" class="contacts">
+    <h2>Контакты</h2>
+
+    <p>
+      📍 Дзержинск, ул. Ленина 67
+    </p>
+
+    <div class="socials">
+      <a href="#" class="social tg">Telegram</a>
+      <a href="#" class="social vk">VK</a>
+    </div>
+  </section>
+
+  <!-- ================= FOOTER ================= -->
+  <footer class="footer">
+    <p>© 2026 Beautiful. Все права защищены.</p>
+  </footer>
+
+  <!-- ОСНОВНОЙ JS -->
+  <script src="script.js"></script>
 </body>
 </html>
-    
